--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 numpy >= 1.20.3
-gspread >= 3.7.0
-oauth2client >= 4.1.3
 requests >= 2.25.1
 matplotlib >= 3.4.2
 python-binance >= 1.0.10
 click>=7.1.2
+rich>=10.2.2
